Attempt to make Ubuntu 16.04 ready

--- a/local-cookbooks/cyclescape/templates/default/database.yml.erb
+++ b/local-cookbooks/cyclescape/templates/default/database.yml.erb
@@ -4,7 +4,7 @@ postgres: &postgres
   pool: 5
   username: cyclescape
   password:
-  script_dir: <%= @script_dir %>
+  <%= @script %>
 
 test:
   <<: *postgres
